<resources>
    <string name="app_name">Udyog Sathi</string>
    <string name="hello">Hello</string>
    <string name="dummy_text">dummy_text</string>
    <string name="my_mob">My Mobile Number</string>
    <string name="continues">Continue</string>
    <string name="entermob">Enter Mobile Number</string>
    <string name="myotp">My Otp</string>
    <string name="enteronetimecode">Enter OTP</string>
    <string name="epersonaldetails">Personal Details</string>
    <string name="yourName">Name</string>
    <string name="emailId">Your E-Mail</string>
    <string name="address">Your Address</string>
    <string name="dob">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="aadhaar">Aadhar Number</string>
    <string name="number">Number</string>
    <string name="qualification">Highest Qualification</string>
    <string name="disability_type">Disability Type</string>
    <string name="home">Home</string>
    <string name="service">Jobs</string>
    <string name="jobs">Job\'s</string>
    <string name="support">Support</string>
    <string name="community">Community</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hi">Hi</string>
    <string name="hope_you_are_doing_good">Hope you are doing well</string>
    <string name="notifications">Notification</string>
    <string name="title">Title</string>
    <string name="date">15/06  4:50pm</string>
    <string name="my_email">My E-Mail Address</string>
    <string name="enteremail">Enter E-Mail address</string>
</resources>