<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation2"
    app:startDestination="@+id/frag_home">

    <fragment
        android:id="@+id/frag_home"
        android:name="com.example.udyogsathi.Home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/frag_job"
        android:name="com.example.udyogsathi.Jobs.JobsFragment"
        android:label="@string/jobs"
        tools:layout="@layout/fragment_jobs" />

    <fragment
        android:id="@+id/frag_support"
        android:name="com.example.udyogsathi.Support.SupportFragment"
        android:label="@string/support"
        tools:layout="@layout/fragment_support" />


    <fragment
        android:id="@+id/frag_community"
        android:name="com.example.udyogsathi.Community.CommunityFragment"
        android:label="@string/community"
        tools:layout="@layout/fragment_community" />



</navigation>