<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OTP.ActivityOtp">

    <TextView
        android:id="@+id/tv_ev"

        android:layout_width="wrap_content"
        android:padding="3dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/latobold"
        android:text="@string/myotp"
        android:textSize="22sp"

        android:textColor="@color/black"
        android:layout_marginTop="250dp"
        android:layout_marginHorizontal="20dp"
        />

    <TextView
        android:id="@+id/ycn"
        android:padding="3dp"
        android:layout_below="@+id/tv_ev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/latobold"
        android:text="@string/dummy_text"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="20dp"
        />



    <TextView
        android:id="@+id/my_mob"
        android:layout_below="@+id/ycn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/latoregular"
        android:padding="3dp"
        android:text="@string/enteronetimecode"
        android:textSize="18sp"
        android:textAlignment="textStart"
        android:textColor="#191818"
        android:textStyle="bold"
        android:layout_marginTop="60dp"
        android:layout_marginHorizontal="30dp"
        />





    <in.aabhasjindal.otptextview.OtpTextView
        android:id="@+id/edt_otp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_marginHorizontal="20dp"
        app:height="50dp"
        android:layout_centerHorizontal="true"
        android:paddingLeft="12dp"
        android:layout_below="@id/my_mob"
        app:width="50dp"
        app:otp_box_background="@drawable/bg_curved_stroke_grey"
        app:otp_box_background_active="@drawable/bg_curved_stroke_black"
        app:otp_box_background_error="@drawable/bg_curved_stroke_red"
        app:otp_box_background_success="@drawable/bg_curved_stroke_green"
        app:length="4"
        android:layout_marginTop="20dp"
        app:otp_text_size="22dp"
        />



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginTop="40dp"
        android:id="@+id/re_continue"
        android:gravity="center"
        android:background="@drawable/bg_button"

        android:layout_marginHorizontal="25dp"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/btntxt"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/latobold"
            android:text="@string/continues"
            android:padding="3dp"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:layout_marginBottom="10dp"

            android:textColor="@color/white"


            />

        <ImageView
            android:id="@+id/arrow"
            android:layout_centerVertical="true"
            android:layout_width="30dp"
            android:paddingTop="6dp"
            android:layout_marginLeft="5dp"
            android:background="@drawable/rightarrow"
            android:layout_toEndOf="@+id/btntxt"
            android:layout_height="20dp"/>


    </RelativeLayout>
    <include
        android:id="@+id/loader"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        layout="@layout/view_loader" />

</RelativeLayout>