<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register.ActivityRegister">
<ImageView
    android:id="@+id/register_logo"
    android:layout_marginTop="60dp"
    android:layout_centerHorizontal="true"
    android:src="@drawable/logo"
    android:layout_width="200dp"
    android:layout_height="90dp">

</ImageView>


    <TextView
        android:id="@+id/tv_ev"
android:layout_below="@+id/register_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/latobold"
        android:text="@string/epersonaldetails"
        android:textSize="22sp"
        android:padding="3dp"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="25dp"
        />


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/tv_ev"
        android:scrollbars="none"
        android:overScrollMode="never"
        android:fillViewport="true"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="10dp"

                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    style="?attr/textInputOutlinedStyle"
                    android:id="@+id/textField_name"
                    android:layout_below="@+id/ycn"
                    android:layout_marginTop="1dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:startIconDrawable="@drawable/ic_baseline_person_outline_24"
                    app:startIconContentDescription="@string/yourName"
                    android:hint="@string/yourName">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:fontFamily="@font/latobold"
                        android:id="@+id/tv_name"
                        android:maxLines="1"
                        android:maxLength="40"
                        android:layout_height="wrap_content"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="?attr/textInputOutlinedStyle"
                    android:id="@+id/textField_email"
                    android:layout_below="@+id/ycn"
                    android:layout_marginTop="10dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:startIconDrawable="@drawable/ic_baseline_email_24"
                    app:startIconContentDescription="@string/emailId"
                    android:hint="@string/emailId">

                    <com.google.android.material.textfield.TextInputEditText
                        android:maxLines="1"
                        android:maxLength="50"
                        android:layout_width="match_parent"
                        android:fontFamily="@font/latobold"
                        android:id="@+id/tv_email"
                        android:layout_height="wrap_content"
                        />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    style="?attr/textInputOutlinedStyle"
                    android:id="@+id/textField_address"
                    android:layout_below="@+id/ycn"
                    android:layout_marginTop="10dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:startIconDrawable="@drawable/ic_baseline_location_on_24"
                    app:startIconContentDescription="@string/address"
                    android:hint="@string/address">

                    <com.google.android.material.textfield.TextInputEditText
                        android:maxLines="2"
                        android:maxLength="100"
                        android:layout_width="match_parent"
                        android:fontFamily="@font/latobold"
                        android:id="@+id/tv_address"
                        android:layout_height="wrap_content"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="?attr/textInputOutlinedStyle"
                    android:id="@+id/textField_dob"
                    android:layout_below="@+id/ycn"
                    android:layout_marginTop="10dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:startIconDrawable="@drawable/ic_baseline_calendar_month_24"
                    app:startIconContentDescription="@string/dob"
                    android:hint="@string/dob">

                    <com.google.android.material.textfield.TextInputEditText
                        android:maxLines="1"
                        android:inputType="date"
                        android:maxLength="15"
                        android:layout_width="match_parent"
                        android:fontFamily="@font/latobold"
                        android:id="@+id/tv_dob"
                        android:padding="3dp"
                        android:layout_height="wrap_content"
                        />

                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    style="?attr/textInputOutlinedStyle"
                    android:id="@+id/textField_aadhar"
                    android:layout_below="@+id/ycn"
                    android:layout_marginTop="10dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:startIconDrawable="@drawable/ic_baseline_add_card_24"
                    app:startIconContentDescription="@string/dob"
                    android:hint="@string/aadhaar">

                    <com.google.android.material.textfield.TextInputEditText
                        android:maxLines="1"
                        android:maxLength="12"
                        android:inputType="number"
                        android:layout_width="match_parent"
                        android:fontFamily="@font/latobold"
                        android:id="@+id/tv_aadhar"
                        android:padding="3dp"
                        android:layout_height="wrap_content"
                        />

                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    style="?attr/textInputOutlinedStyle"
                    android:id="@+id/textField_phone"

                    android:layout_marginTop="10dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:startIconDrawable="@drawable/ic_baseline_phone_24"
                    app:startIconContentDescription="@string/dob"
                    android:hint="@string/number">

                    <com.google.android.material.textfield.TextInputEditText
                        android:maxLines="1"
                        android:inputType="number"
                        android:maxLength="10"
                        android:layout_width="match_parent"
                        android:fontFamily="@font/latobold"
                        android:id="@+id/tv_phone"
                        android:padding="3dp"
                        android:layout_height="wrap_content"
                        />

                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    style="?attr/textInputOutlinedStyle"
                    android:id="@+id/textField_qualification"

                    android:layout_marginTop="10dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:startIconDrawable="@drawable/ic_baseline_newspaper_24"
                    android:hint="@string/qualification">

                    <com.google.android.material.textfield.TextInputEditText
                        android:maxLines="1"
                        android:maxLength="15"
                        android:layout_width="match_parent"
                        android:fontFamily="@font/latobold"
                        android:id="@+id/tv_qualification"
                        android:padding="3dp"
                        android:layout_height="wrap_content"
                        />

                </com.google.android.material.textfield.TextInputLayout>


                <TextView
                    android:id="@+id/yourgender"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/latobold"
                    android:text="@string/gender"
                    android:textSize="16sp"
                    android:padding="3dp"
                    android:textColor="@color/black"
                    android:layout_marginTop="10dp"
                    android:layout_marginHorizontal="20dp"
                    />


                <LinearLayout
                    android:layout_width="250dp"
                    android:layout_marginTop="10dp"
                    android:weightSum="2"
                    android:layout_marginHorizontal="20dp"
                    android:layout_height="wrap_content">



                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:id="@+id/re_female"
                        android:background="@drawable/border"
                        android:layout_weight="1">


                        <ImageView
                            android:id="@+id/img_feml"
                            android:layout_width="20dp"
                            android:src="@drawable/female"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp"
                            android:layout_marginLeft="15dp"
                            android:layout_height="20dp"/>
                        <TextView
                            android:id="@+id/tv_female"
                            android:layout_width="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="5dp"
                            android:fontFamily="@font/latoblack"
                            android:text="@string/female"

                            android:textColor="@color/black"
                            android:layout_toEndOf="@+id/img_feml"
                            android:layout_height="wrap_content"/>


                    </RelativeLayout>



                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:id="@+id/re_male"
                        android:background="@drawable/bg_button"
                        android:layout_marginLeft="25dp"
                        android:layout_weight="1">

                        <ImageView
                            android:id="@+id/img_male"
                            android:layout_width="20dp"
                            android:src="@drawable/male"
                            android:layout_marginTop="10dp"

                            android:layout_marginBottom="10dp"
                            android:layout_marginLeft="15dp"
                            android:layout_height="20dp"/>
                        <TextView
                            android:id="@+id/tv_male"
                            android:layout_width="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="5dp"
                            android:fontFamily="@font/latoblack"
                            android:text="@string/male"

                            android:textColor="@color/white"
                            android:layout_toEndOf="@+id/img_male"
                            android:layout_height="wrap_content"/>
                    </RelativeLayout>


                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_marginTop="40dp"
                    android:id="@+id/re_continue"
                    android:gravity="center"
                    android:background="@drawable/bg_button"
                    android:layout_below="@id/edt_otp"
                    android:layout_marginHorizontal="25dp"
                    android:layout_height="wrap_content">


                    <TextView
                        android:id="@+id/btntxt"

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/latobold"
                        android:text="@string/continues"
                        android:padding="3dp"
                        android:layout_marginTop="10dp"
                        android:textSize="18sp"
                        android:layout_marginBottom="10dp"

                        android:textColor="@color/white"


                        />

                    <ImageView
                        android:id="@+id/arrow"
                        android:layout_centerVertical="true"
                        android:layout_width="30dp"
                        android:paddingTop="6dp"
                        android:layout_marginLeft="5dp"
                        android:background="@drawable/rightarrow"
                        android:layout_toEndOf="@+id/btntxt"
                        android:layout_height="20dp"/>


                </RelativeLayout>


            </LinearLayout>

        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>


    <include
        android:id="@+id/loader"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        layout="@layout/view_loader" />
</RelativeLayout>